# fastapi-search-cookiecutter

./: .gitignore  CONTRIBUTING.org  README.org  cookiecutter.json  local_extensions.py
.github/workflows/: build-and-test-on-pr.yml  push-ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
replays/: fastapi-elasticsearch-cookiecutter.json  fastapi-opensearch-cookiecutter.json
{{ cookiecutter.project_slug }}/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  run.sh  sample.env  test.sh
{{ cookiecutter.project_slug }}/alembic/: env.py
{{ cookiecutter.project_slug }}/alembic/versions/: 2022_07_02_1327-c08e111136e7_update_column_trigger.py  2022_07_03_0835-c05f1b900086_sprocket_widget_tables.py  2022_07_03_1125-4b6d14d12a2e_inventory_table.py
{{ cookiecutter.project_slug }}/app/: main.py
{{ cookiecutter.project_slug }}/app/api/: deps.py
{{ cookiecutter.project_slug }}/app/api/api_v1/: api.py
{{ cookiecutter.project_slug }}/app/api/api_v1/endpoints/: inventory.py  widget.py
{{ cookiecutter.project_slug }}/app/core/: config.py
{{ cookiecutter.project_slug }}/app/db/: database.py  search.py  tools.py
{{ cookiecutter.project_slug }}/app/schemas/: __init__.py  inventory.py  sprocket.py  widget.py
{{ cookiecutter.project_slug }}/app/templates/: index.html
{{ cookiecutter.project_slug }}/docker/: Dockerfile  docker-compose.env  docker-compose.yml
{{ cookiecutter.project_slug }}/scripts/: build.sh  lint.sh  run.sh  test.sh
{{ cookiecutter.project_slug }}/tests/: README.md  config.py  conftest.py
{{ cookiecutter.project_slug }}/tests/data/: conftest.py
{{ cookiecutter.project_slug }}/tests/data/api_v1/endpoints/: conftest.py  test_widget.py
