[tool.poetry]
name = "fastapi-search"
version = "0.1.0"
description = "FastAPI Search project starter template"
authors = ["fapi-search"]

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
pydantic = {extras = ["email", "dotenv"], version = "^1.9.1"}
databases = {extras = ["asyncpg"], version = "^0.6.0"}
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.961"
debugpy = "^1.6.0"
pylint = "^2.14.4"
python-lsp-server = "^1.4.1"
python-lsp-black = "^1.2.1"
pyls-isort = "^0.2.2"
isort = "^5.10.1"
pylsp-mypy = "^0.5.8"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.isort]
profile = "black"
